--- a/sem.html
+++ b/sem.html
@@ -28,7 +28,7 @@
 				<h1>COLLEGE BAZAR</h1>
 				<h3>SELL YOUR ACCESSORIES</h3>
 				<br>
-				<button type="button" class="btn">EXPLORE</button>
+				<a href="https://collegebazar.diksprojects.repl.co"><button type="button" class="btn">EXPLORE</button></a>
 			</div>
 			<div class="vertical-bar">
 				<div class="search-icon">
